fix: nav bar link position on safari

--- a/src/app/transactions/transaction/transaction.component.scss
+++ b/src/app/transactions/transaction/transaction.component.scss
@@ -1,3 +1,9 @@
-.nav-bar a {
-  float: right;
+.nav-bar {
+  position: relative;
+
+  a {
+    display: block;
+    position: absolute;
+    right: 0;
+  }
 }
